--- a/index.html
+++ b/index.html
@@ -5,33 +5,18 @@
         <title>My First Website</title>
     </head>
  <body>
-    <h1>Hello world!</h1>
+    <h1>Gabbii's Page</h1>
 
-    <p>hello world! my name is gabrielle</p>
-   
-    <h2>section 1</h2>
+     <img src="GABBII.jpg">
 
-    <p>hello world my name is gabrielle</p>
-  
-    <h3>section 1.1</h3>
-
-    <p>hello world! my name is gabrielle</p>
-
+    <h2>About me</h2>
+     My name is Gabrielle Raymond, I'm 19 years old 
+     The things i enjoy doing for Fun are:
     <ul>
-        <li>first item</li>
-        <li>second item</li>
-        <li>third item</li>
+        <li>Playing 8ball pool</li>
+        <li>learning tiktok dances</li>
+        <li>Making tiktok videos</li>
     </ul>
-
-    <h3>section 1.2</h3>
-
-    <p>heres a numbered list</p>
-
-    <ol>
-        <li>first item</li>
-        <li>second item</li>
-        <li>third item</li>
-      </ol>
- </body>
+  </body>
 
 </html>
