--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 
 <html>
     <head>
-        <title>My First Website</title>
+        <title>Gabrielle-Homepage</title>
+        <link rel="stylesheet" href="style.css">
     </head>
  <body>
-    <h1>Gabbii's Page</h1>
+    <h1 style="font-size: 72px;">Gabbii's Page</h1>
 
      <img src="GABBII.jpg">
 
-    <h2>About me</h2>
-     My name is Gabrielle Raymond, I'm 19 years old 
-     The things i enjoy doing for Fun are:
-    <ul>
-        <li>Playing 8ball pool</li>
-        <li>learning tiktok dances</li>
-        <li>Making tiktok videos</li>
-    </ul>
-  </body>
+     <p>
+       Click <a href="about me.html">Here</a>
+       To learn more about me.
+     </p>
+  
 
-</html>
+   </body>
+ <html>
+
