--- a/about me.html
+++ b/about me.html
@@ -8,7 +8,7 @@
 
    <body>
          
-      <h1>Gabrielle - about me</h1> 
+      <h1>About me</h1> 
 
      <p> I'm a <a href="https://www.google.com/search?q=agro+food+processing+trainee&hl=en-GB&sxsrf=AOaemvInqYaWYN676E247S5yFusYpeXdGA:1634670250041&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjN58-cldfzAhVSTjABHVw5DO8Q_AUoAXoECAEQAw&biw=1366&bih=657&dpr=1">Agro Food proccessing Trainee!</a> My name is 
      Gabrielle Raymond, I'm 19 years old.
@@ -51,6 +51,9 @@
     <p>
      Click <a href="index.html">Here</a> to go back to 
      my homepage.
+     </p>
+     <p>
+     Click <a href="Resume.html">Here</a> to go to my Resume page.
      </p>
   </body>
 </html>
