--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
     <h1 style="font-size: 72px;">Gabbii's Page</h1>
 
-     <img src="GABBII.jpg">
+     <img src="IMG_GABB.jpg">
 
      <p>
        Click <a href="about me.html">Here</a>
