--- a/Resume.html
+++ b/Resume.html
@@ -3,8 +3,9 @@
 <html>
   <head>
     <title>Gabrielle-Homepage</title>
-    <link  rel="stylesheet" href="style.css">
- </head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
   
    <body>
 
@@ -13,31 +14,60 @@
 
   <h2>Expriences</h2>
 
- 2016-19 - <li> Student At Thee Bellefield High school</li>
-    I was a pass student of Bellefield High school there i did different
-    subjects such as maths english etc then i also went on a work expricene at
-    hope demonstrative basic school,later down i then graduated High school in june in 2019 with a 
-    school leaving cerfiticate.
+   2016-19 - <li> 
+     Student At Thee Bellefield High school.
 
- 2018-18 - <li>Assistance at Hope demonstrative basic school</li>
-    while i was a student at Thee Bellefield High school i went on a work exprience working
-    as an assistance at the basic school and i worked for two weeks so in that term i know how to work with toddlers.
+    I was a pass student of Bellefield High school 
+    there i did different
+    subjects such as maths english etc then 
+    i also went on a work expricene at
+    hope demonstrative basic school,later 
+    down i then graduated High school 
+    in june in 2019 with a school 
+    leaving cerfiticate.
+            </li>
+
+
+   2018-18 - <li>
+     Assistance at Hope demonstrative basic school.
+
+    while i was a student at Thee Bellefield 
+    High school i went on a 
+    work exprience working as an 
+    assistance at the basic school 
+    and i worked for
+     two weeks so in that term i know 
+     how to work with toddlers.
+    </li>
     
-            
 
   <h2>Education</h2>
-  2019-20 - <li>  Student at Mandeville School Of learning instituion of learning</li>
-   I attended the instituion for 1 year to do 3 CXC/CSEC subjects.
-   
-  2021-22 - <li> Village Academy school of agriculture/ Heart Trust NSTA</li>
-    I am currently an Agro food Processing Student/Trainee i am doing the course agro food processing 
-    for 1 year within that 1 year i will receive an NCTVET cerfiticate which means i can work for any 
-    agro food processing industry or company.
 
-  2021-22 - <li> EpiSchool courses</li>
+
+  2019-20 - <li>  
+    Student at Mandeville School Of learning instituion of learning.
+
+     I attended the instituion for 1 year to do 3 CXC/CSEC subjects.
+           </li>
+   
+   2021-22 - <li> 
+     Village Academy school of agriculture/ Heart Trust NSTA.
+
+    I am currently an Agro food Processing Student/Trainee i am doing the 
+    course agro food processing  for 1 year within that 1 year
+     i will receive an 
+    NCTVET cerfiticate which means 
+    i can work for any 
+    agro food processing industry or company.
+            </li>
+
+   2021-22 - <li>
+      EpiSchool courses.
+
     i am also a student at my EpiSchool which teaches you about tecnology 
-    how to design and build websites and also Application. it also introduces you to python programings etc. 
-    and that course lasts for 6 months.
+    how to design and build websites and also Application. it also introduces 
+    you to python programings etc, and that course lasts for 6 months.
+             </li>
 
     <h2>cerfiticate</h2>
 
