--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
  <body>
-    <h1 style="font-size: 72px;">Gabbii's Page</h1>
+    <h1 style="font-size: 50px;">Gabbii's Page</h1>
 
-     <img src="IMG_GABB.jpg">
+       <img src="GABBII.jpg">
 
      <p>
        Click <a href="about me.html">Here</a>
