--- a/about me.html
+++ b/about me.html
@@ -8,13 +8,11 @@
 
    <body>
 
-    <img src="IMG_GABB.jpg">
-
-
+     <img src="GABBII.jpg">
          
       <h1>About me</h1> 
 
-     <p> I'm a <a href="https://www.google.com/search?q=agro+food+processing+trainee&hl=en-GB&sxsrf=AOaemvInqYaWYN676E247S5yFusYpeXdGA:1634670250041&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjN58-cldfzAhVSTjABHVw5DO8Q_AUoAXoECAEQAw&biw=1366&bih=657&dpr=1">Agro Food proccessing Trainee!</a> My name is 
+     <p> I'm a <a href=">!-- https://www.google.com/search?q=agro+food+processing+trainee&hl=en-GB&sxsrf=AOaemvInqYaWYN676E247S5yFusYpeXdGA:1634670250041&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjN58-cldfzAhVSTjABHVw5DO8Q_AUoAXoECAEQAw&biw=1366&bih=657&dpr=1">Agro Food proccessing Trainee!</a> My name is  -->
      Gabrielle Raymond, I'm 19 years old.
      The things i enjoy doing for Fun Includes:</p>
         <li>Playing 8ball pool</li>
