--- a/about me.html
+++ b/about me.html
@@ -12,9 +12,9 @@
          
       <h1>About me</h1> 
 
-     <p> I'm a <a href=">!-- https://www.google.com/search?q=agro+food+processing+trainee&hl=en-GB&sxsrf=AOaemvInqYaWYN676E247S5yFusYpeXdGA:1634670250041&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjN58-cldfzAhVSTjABHVw5DO8Q_AUoAXoECAEQAw&biw=1366&bih=657&dpr=1">Agro Food proccessing Trainee!</a> My name is  -->
-     Gabrielle Raymond, I'm 19 years old.
-     The things i enjoy doing for Fun Includes:</p>
+     <p> I'm a <a href="https://www.google.com/search?q=agro+food+processing+trainee&sxsrf=AOaemvLhC9hIoYN5GnqYEV7-SAAAtYYzlQ%3A1635882887959&source=hp&ei=h5eBYdzVN-O75OUP37y94Ag&iflsig=ALs-wAMAAAAAYYGllwUpEvxCQf-0Hi_b0YA_5Pr4WJdw&oq=agr&gs_lcp=Cgdnd3Mtd2l6EAEYADIECCMQJzIICAAQgAQQsQMyCAgAEIAEELEDMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDoHCCMQ6gIQJzoHCC4QJxCTAjoLCAAQgAQQsQMQgwE6CwguEIAEEMcBENEDOggILhCABBCxAzoOCC4QgAQQsQMQxwEQowI6CwguEIAEELEDEIMBUModWMEjYKQuaAFwAHgAgAHFAYgB-QOSAQMwLjOYAQCgAQGwAQo&sclient=gws-wiz">Agro Food proccessing Trainee!</a> 
+      My name is Gabrielle Raymond, I'm 19 years old.
+      The things i enjoy doing for Fun Includes:</p>
         <li>Playing 8ball pool</li>
         <li>learning tiktok dances</li>
         <li>Making tiktok videos</li>
@@ -56,6 +56,9 @@
      </p>
      <p>
      Click <a href="Resume.html">Here</a> to go to my Resume page.
+     </p>
+     <p>
+     Click <a href="checkers.html">Here</a> to go to my div test page.
      </p>
   </body>
 </html>
