--- a/about me.html
+++ b/about me.html
@@ -60,5 +60,8 @@
      <p>
      Click <a href="checkers.html">Here</a> to go to my div test page.
      </p>
+     <p>
+       Click<a href="side-menue.html"> Here</a> to go to my menue page.
+     </p>
   </body>
 </html>
