--- a/about me.html
+++ b/about me.html
@@ -26,7 +26,7 @@
          <thead>
            <tr>
               <td>Data</td>
-              <td>Answer</td>
+              <td>Category</td>
               <td>Fun Fact:</td>
            </tr>
         </thead>
@@ -34,34 +34,30 @@
           <tbody>
             <tr>
               <td>Name</td>
-              <td>Gabrielle</td>
-              <td>The name i have was given to me by my mother</td>
+              <td>Gabbii</td>
+              <td>The nickname i have is spelt unique i rather to spell my gabbii that way </td>
            <tr> 
            <tr>
               <td>Birthday</td>
               <td>August 4,2002</td>
-              <td>I turned 19year old this year!</td>
+              <td>I turned 19 year old this year!</td>
             </tr>
-            <tr>
-              <td>weight</td>
-              <td>130 lb(58.967kg)</td>
-              <td>last time i weight 121</td>
-            </tr>
+      
          </tbody> 
       </table>
 
     <p>
-     Click <a href="index.html">Here</a> to go back to 
+     Click <a href="index.html">here</a> to go back to 
      my homepage.
      </p>
      <p>
-     Click <a href="Resume.html">Here</a> to go to my Resume page.
+     Click <a href="Resume.html">here</a> to go to my Resume page.
      </p>
      <p>
-     Click <a href="checkers.html">Here</a> to go to my div test page.
+     Click <a href="checkers.html">here</a> to go to my div test page.
      </p>
      <p>
-       Click<a href="side-menue.html"> Here</a> to go to my menue page.
+       Click <a href="side-menu.html">here</a> to go to my menu page.
      </p>
   </body>
 </html>
