--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
        <img src="GABBII.jpg">
 
      <p>
-       Click <a href="about me.html">Here</a>
-       To learn more about me.
+       Click <a href="about me.html">here</a>
+       to learn more about me.
      </p>
-  
-
+     
    </body>
  <html>
 
